DONE: preparing code structure for the admin app incorporation (2)

--- a/packages/admin-frontend/src/styles/public.scss
+++ b/packages/admin-frontend/src/styles/public.scss
@@ -10,10 +10,10 @@
   background: url('../assets/img/divergent_dots.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #6a0080;
+  background-color: #0097A7;
 
   .MuiCard-root {
-    background: hsla(291, 64%, 42%, 0.73);
+    background: hsla(187, 100%, 42%, 0.73);
     color: white;
     padding: 15px;
   }
