--- a/packages/app-frontend/src/styles/private.scss
+++ b/packages/app-frontend/src/styles/private.scss
@@ -1,4 +1,31 @@
+header {
+  border-bottom: 1px solid #e3cce8;
+}
+
 .private-layout {
-  background-color: #fff;
+  background-color: #fbf8fd;
   min-height: 100vh;
+}
+
+.defol-toolbar {
+  .defol-logo {
+    color: #3d3d3d;
+    svg {
+      margin-right: 10px;
+    }
+    .defol-logo-text {
+      font-size: 2rem;
+      font-weight: 400;
+      margin: 0;
+    }
+  }
+  .MuiButton-root {
+    text-transform: none;
+    font-size: 0.975rem;
+    font-weight: 400;
+
+    &.MuiButton-text {
+      color: #3d3d3d;
+    }
+  }
 }
