--- a/packages/app-frontend/src/styles/private.scss
+++ b/packages/app-frontend/src/styles/private.scss
@@ -1,16 +1,15 @@
 header {
-  border-bottom: 1px solid #e3cce8;
+  border-bottom: 1px solid #abd3ff;
 }
 
 .private-layout {
-  background-color: #fbf8fd;
+  background-color: #f8fbff;
   min-height: 100vh;
 }
 
 .defol-toolbar {
 
   .defol-logo {
-    color: #3d3d3d;
     svg {
       margin-right: 10px;
     }
