ADMIN-BACK: ADD: convenio cod and name added to email @libs-update

--- a/packages/signal/src/email/templates/invitacion/content.html
+++ b/packages/signal/src/email/templates/invitacion/content.html
@@ -7,14 +7,14 @@
   <style>
 		__style__
   </style>
-  <title>[DEFOL] Usted ha sido invitado a registrarse en DEFOL</title>
+  <title>[DEFOL] Usted ha sido invitado a registrarse en DEFOL ($convenio.cod)</title>
 </head>
 <body>
 <div class="container">
   <h1>¡Hola! 👋</h1>
   <p>
     Te invitamos a completar tu registro en nuestra plataforma y comenzar a realizar tus consultas legales a nuestro
-    equipo de especialistas.
+    equipo de especialistas ($convenio.nombre).
   </p>
   <p>
     Regístrate <a href="$url" target="_blank" rel="noopener noreferrer">aquí</a>.
