FIX: several improvements and corrections based on the production release and team revision

--- a/packages/signal/src/email/templates/nueva-respuesta/content.html
+++ b/packages/signal/src/email/templates/nueva-respuesta/content.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8">
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <style>$style</style>
-  <title>[DEFOL] Usted ha sido invitado a registrarse en DEFOL</title>
+  <title>[DEFOL] Has recibido una nueva respuesta</title>
 </head>
 <body>
 <div class="container">
   <h1>¡Hola! 👋</h1>
   <p>
-    Te invitamos a completar tu registro en nuestra plataforma y comenzar a realizar tus consultas legales a nuestro
-    equipo de especialistas.
+    Nuestro equipo de especialistas en DEFOL ha respondido una de tus preguntas o réplicas.
   </p>
   <p>
-    Regístrate <a href="$url" target="_blank" rel="noopener noreferrer">aquí</a>.
+    Para revisar accede <a href="$url" target="_blank" rel="noopener noreferrer">aquí</a>.
   </p>
   <br>
   <p>Atentamente,<br><b>Equipo DEFOL</b></p>
